新規登録APIの追加
